--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Sam"
         tools:targetApi="31">
         <activity
+            android:name=".IntroductionActivity"
+            android:exported="false"
+            android:label="@string/title_activity_introduction"
+            android:theme="@style/Theme.Sam" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
