--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
 
     implementation platform("com.google.firebase:firebase-bom:30.3.1")
     implementation "com.google.firebase:firebase-auth-ktx"
-
+    dependencies {
+        implementation 'com.airbnb.android:lottie-compose:6.0.1'
+    }
     implementation "androidx.activity:activity-compose:1.5.1"
     implementation "androidx.compose.material3:material3:1.0.0-beta01"
     implementation "androidx.compose.animation:animation:1.2.1"
